# mdb-fields-cleaner

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  release.yaml  test.yaml
mdb_fields_cleaner/: __init__.py  dataclass.py  pydantic.py
tests/: conftest.py  test_cleaner.py  test_models.py
