[tool.poetry]
name = "mdb-fields-cleaner"
version = "v0.0.3"
description = ""
authors = ["Carlos Martin Sanchez <carlos.martin-sanchez@mongodb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
