[tool.poetry]
name = "mdb-fields-cleaner"
version = "0.0.17"
description = ""
authors = ["Carlos Martin Sanchez <carlos.martin-sanchez@mongodb.com>"]
readme = "README.md"
repository = "https://github.com/carlosvin/mdb-fields-cleaner"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.9"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--cov"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
